syntax = "proto3";

package katium.client.qq.packet;

option java_package = "katium.client.qq.network.pb";
option java_outer_classname = "PbMessagesReadReport";

message ReadReportRequest {
  repeated GroupReadReportRequest group = 1;
  repeated DiscussionReadReportRequest discussion = 2;
  optional FriendReadReportRequest friend = 3;
  optional BoundUinReadReportRequest boundUin = 4;
}

message ReadReportResponse {
  repeated GroupReadReportResponse group = 1;
  repeated DiscussionReadReportResponse discussion = 2;
  optional FriendReadReportResponse friend = 3;
  optional BoundUinReadReportResponse boundUin = 4;
}

message GroupReadReportRequest {
  uint64 groupCode = 1;
  uint64 lastReadSequence = 2;
}

message GroupReadReportResponse {
  uint32 result = 1;
  optional string error = 2;
  optional uint64 groupCode = 3;
  optional uint64 memberSequence = 4;
  optional uint64 groupMessageSequence = 5;
}

message DiscussionReadReportRequest {
  optional uint64 confUin = 1;
  optional uint64 lastReadSequence = 2;
}

message DiscussionReadReportResponse {
  optional uint32 result = 1;
  optional string error = 2;
  optional uint64 confUin = 3;
  optional uint64 memberSequence = 4;
  optional uint64 confSeq = 5;
}

message FriendReadReportRequest {
  bytes syncCookie = 1;
  repeated UinPairReadInfo info = 2;
}

message UinPairReadInfo {
  uint64 peerUin = 1;
  uint32 lastReadTime = 2;
  optional bytes crmSig = 3;
  optional uint32 peerType = 4;
  optional uint32 chatType = 5;
  optional uint64 cpid = 6;
  optional uint32 aioType = 7;
  optional uint64 toTinyId = 9;
}

message FriendReadReportResponse {
  uint32 result = 1;
  optional string error = 2;
  optional bytes syncCookie = 3;
}

message BoundUinReadReportRequest {
  optional bytes syncCookie = 1;
  uint64 boundUin = 2;
}

message BoundUinReadReportResponse {
  uint32 result = 1;
  optional string error = 2;
  optional bytes syncCookie = 3;
  uint64 boundUin = 4;
}
